Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,5 @@ steps:
 - script: mvn clean install
   displayName: 'Build with maven'
   
-- script: java -jar target/MyMavenApp6005-1.0-SNAPSHOT.jar
+- script: java -jar target/MyMavenApp-1.0-SNAPSHOT.jar
   displayName: 'Running jar'
